[tool.poetry]
name = "api_vacinacao"
version = "0.1.0"
description = "API FastAPI, com conexão PostgreSQL no Tembo."
authors = ["Nicolas Evilasio <nicolas_evilasio@hotmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
infisical-python = "^2.3.5"
flask = "^3.0.3"
slowapi = "^0.1.9"
email-validator = "^2.2.0"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.18"
aiosqlite = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
